--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "promise-polyfill": "^6.0.2",
     "vue": "^2.2.2",
+    "vue-infinite-loading": "^2.0.3",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
